--- a/OneMainWeb/packages.config
+++ b/OneMainWeb/packages.config
@@ -1,19 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="51Degrees.mobi" version="3.1.11.1" targetFramework="net45" />
-  <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
-  <package id="bootstrap" version="3.3.2" targetFramework="net45" />
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net45" />
+  <package id="bootstrap" version="3.0.3" targetFramework="net45" />
   <package id="Bootstrap.v3.Datetimepicker" version="4.7.14" targetFramework="net45" />
   <package id="Bootstrap.v3.Datetimepicker.CSS" version="4.7.14.1" targetFramework="net45" />
-  <package id="BundleTransformer.Core" version="1.9.43" targetFramework="net45" />
+  <package id="BundleTransformer.Core" version="1.9.51" targetFramework="net45" />
   <package id="BundleTransformer.SassAndScss" version="1.9.49" targetFramework="net45" />
   <package id="BundleTransformer.Yui" version="1.9.34" targetFramework="net45" />
   <package id="dropzone" version="4.0.0" targetFramework="net45" />
   <package id="EcmaScript.Net" version="1.0.1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="jQuery" version="2.1.3" targetFramework="net45" />
+  <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.11.4" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net45" />
+  <package id="Less.js" version="1.5.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.0" targetFramework="net45" />
@@ -34,7 +35,7 @@
   <package id="NLog.Config" version="3.2.0.0" targetFramework="net45" />
   <package id="NLog.Schema" version="3.2.0.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
-  <package id="Twitter.Bootstrap.Less" version="3.3.4" targetFramework="net45" />
-  <package id="WebGrease" version="1.6.0" targetFramework="net45" />
+  <package id="Twitter.Bootstrap.Less" version="3.0.3" targetFramework="net45" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net45" />
   <package id="YUICompressor.NET" version="2.7.0.0" targetFramework="net45" />
 </packages>
